--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-<script type="text/javascript" src="./rps.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Piedra, papel o tijera!</title>
+</head>
+<body>
+    <h1>Well actually only playable from the console... so put play(); and test it!</h1>
+    <br>
+    <h1>Actualmente solo se puede jugar en la consola, así que use play(); y pruebe!</h1>
+    <script type="text/javascript" src="./rps.js"></script>
+</body>
+</html>
