Added some css style, and new title.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Piedra, papel o tijera!</title>
+    <title>Rock, Paper or Scissors!</title>
 </head>
-<body>
+<body style="text-align: center;display: flex;flex-flow: column;height: 1080px;justify-content: center;">
     <h1>Well actually only playable from the console... so put play(); and test it!</h1>
     <br>
     <h1>Actualmente solo se puede jugar en la consola, así que use play(); y pruebe!</h1>
