Showing the result in the site, added play button

--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     <title>Rock, Paper or Scissors!</title>
 </head>
 <body style="text-align: center;display: flex;flex-flow: column;height: 1080px;justify-content: center;">
-    <h1>Well actually only playable from the console... so put play(); and test it!</h1>
-    <br>
-    <h1>Actualmente solo se puede jugar en la consola, así que use play(); y pruebe!</h1>
+    <h1>Enjoy it!</h1>
+    <button onclick = "play()">Click me</button>
     <script type="text/javascript" src="./rps.js"></script>
 </body>
 </html>
