--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
 </head>
 <body style="text-align: center;display: flex;flex-flow: column;height: 1080px;justify-content: center;">
     <h1>Enjoy it!</h1>
-    <button onclick = "play()">Click me</button>
+    <div id="choice">
+    <button style="width: 100px;margin: 0 auto;" onclick = "rock()">Rock</button>
+    <button style="width: 100px;margin: 0 auto;" onclick = "paper()">Paper</button>
+    <button style="width: 100px;margin: 0 auto;" onclick = "scissors()">Scissors</button>
+    </div>
+
+    <br>
+    <div id="result"></div>
     <script type="text/javascript" src="./rps.js"></script>
 </body>
 </html>
